# Slip

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  ReadMe.md  appveyor.yml  index.html  params.json
doc/: Slip详细设计.md  Slip语言概要设计.md
include/: slip.h  slip.hpp  slipconf.h
src/: gc.h  lex.l  libapi.c  libapi.h  list.c  list.h  main.c  object.h  parser.y  schunk.c  schunk.h  slip_stdlib.h  slipcore.c  slipcore.h  sliplist.c  sliplist.h  sstring.c  sstring.h  stable.c  stable.h  stack.c  stack.h  stdlib.c  testlib.c  uapi.h  value.c  value.h  vm.c  vm.h
test/: CMakeLists.txt  coretest.c  coretest.cpp  libtest.cpp  sliplisttest.cpp  stringtest.cpp  tabletest.cpp
